Fixed HomePublication responsive layout issue

--- a/website/assets/less/text.less
+++ b/website/assets/less/text.less
@@ -160,10 +160,15 @@ a {
   line-height: 0;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 .text-ellipsis {
   overflow: hidden;
   display: -webkit-box;
   text-overflow: ellipsis;
+  word-break: break-all;
 
   /* autoprefixer: off */
   -webkit-box-orient: vertical;
